--- a/demo/css/app.css
+++ b/demo/css/app.css
@@ -15,6 +15,8 @@
 .newslist__image {
   width: 30vw;
   height: 15vh;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 .newslist__image[lazy="loaded"] {
   transform: matrix3d(0.8, 0, 0, 0, 0, 0.8, 0, 0, 0, 0, 1, 0, 0, 0, 0, 1);
